Fix user-select overflow issue

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13698,6 +13698,7 @@ a.text-gray-dark:hover {
 
 .user-entry {
   margin: 0 auto;
+  overflow: hidden;
   text-align: left;
   white-space: nowrap;
 }
@@ -13711,12 +13712,11 @@ a.text-gray-dark:hover {
 .user-image {
   width: 36px;
   height: 36px;
-  margin-left: 20px;
   border-radius: 50%;
 }
 
 .user-info {
-  margin-left: 10px;
+  margin: 0 10px;
   line-height: 20px;
 }
 
